--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ their content.</p>
 </figure>
 <p>The some important advantages of the use of semantic elements are:</p>
 <ul>
-  <li>Cleaner mark up: Developers' code is more readable and easier to maintain.</li>
+  <li>Cleaner markup: Developers' code is more readable and easier to maintain.</li>
   <li>Communication: Browsers and search engines are better able to determine the meaning of the page and content.</li>
   <li>Accessibility: Allows screen readers and other assistive technologies to better understand the meaning and structure of the page.</li>
 </ul>
